--- a/force-app/main/default/classes/src/FutureClass.cls
+++ b/force-app/main/default/classes/src/FutureClass.cls
@@ -23,4 +23,29 @@ public class FutureClass {
     update newOppList;
     System.debug('---- methodFuture : ' + System.isFuture());
   }
+
+  @future
+  public static void insertUserWithRole(
+    String uname,
+    String al,
+    String em,
+    String lname
+  ) {
+    Profile p = [SELECT Id FROM Profile WHERE Name = 'Standard User'];
+    UserRole r = [SELECT Id FROM UserRole WHERE Name = 'COO'];
+
+    User u = new User(
+      alias = al,
+      email = em,
+      emailencodingkey = 'UTF-8',
+      lastname = lname,
+      languagelocalekey = 'en_US',
+      localesidkey = 'en_US',
+      profileid = p.Id,
+      userroleid = r.Id,
+      timezonesidkey = 'America/Los_Angeles',
+      username = uname
+    );
+    insert u;
+  }
 }
