Add batchable job demo

--- a/force-app/main/default/classes/src/BatchableRaisesPlatformEventsClass.cls
+++ b/force-app/main/default/classes/src/BatchableRaisesPlatformEventsClass.cls
@@ -1,7 +1,7 @@
 public class BatchableRaisesPlatformEventsClass implements Database.Batchable<SObject>, Database.Stateful, Database.RaisesPlatformEvents {
   public Integer batchProcessed = 0;
 
-  public Database.QueryLocator start(Database.BatchableContext BC) {
+  public Database.QueryLocator start(Database.BatchableContext bc) {
     System.debug('start : ' + batchProcessed);
     return Database.getQueryLocator(
       'SELECT Id FROM Account Where BillingCountry != \'USA\''
@@ -12,7 +12,7 @@ public class BatchableRaisesPlatformEventsClass implements Database.Batchable<SO
     System.debug('execute begin : ' + batchProcessed);
     batchProcessed++;
     if (batchProcessed == 3) {
-      throw new MyException('This is a test exception');
+      throw new CommonException('This is a test exception');
     }
     for (Account acc : scope) {
       acc.BillingCountry = 'USA';
@@ -24,8 +24,5 @@ public class BatchableRaisesPlatformEventsClass implements Database.Batchable<SO
   public void finish(Database.BatchableContext BC) {
     System.debug('finish : ' + batchProcessed + ' batch processed.');
     System.debug('Batch finished');
-  }
-
-  public class MyException extends Exception {
   }
 }
