--- a/force-app/main/default/classes/src/BatchableClass.cls
+++ b/force-app/main/default/classes/src/BatchableClass.cls
@@ -1,18 +1,18 @@
 public class BatchableClass implements Database.Batchable<SObject> {
-  public Database.QueryLocator start(Database.BatchableContext BC) {
+  public Database.QueryLocator start(Database.BatchableContext bc) {
     return Database.getQueryLocator(
       'SELECT Id FROM Account Where BillingCountry != \'USA\''
     );
   }
 
-  public void execute(Database.BatchableContext BC, List<Account> scope) {
-    for (Account acc : scope) {
+  public void execute(Database.BatchableContext bc, List<Account> records) {
+    for (Account acc : records) {
       acc.BillingCountry = 'USA';
     }
-    update scope;
+    update records;
   }
 
-  public void finish(Database.BatchableContext BC) {
+  public void finish(Database.BatchableContext bc) {
     System.debug('Batch finished');
   }
 }
