--- a/force-app/main/default/classes/src/BatchableStatefulInvokeServiceClass.cls
+++ b/force-app/main/default/classes/src/BatchableStatefulInvokeServiceClass.cls
@@ -1,15 +1,15 @@
 public class BatchableStatefulInvokeServiceClass implements Database.Batchable<SObject>, Database.Stateful {
   private BatchableStatefulService service = new BatchableStatefulService();
 
-  public Database.QueryLocator start(Database.BatchableContext BC) {
+  public Database.QueryLocator start(Database.BatchableContext bc) {
     return Database.getQueryLocator(service.getQuery());
   }
 
-  public void execute(Database.BatchableContext BC, List<Account> records) {
+  public void execute(Database.BatchableContext bc, List<Account> records) {
     service.process(records);
   }
 
-  public void finish(Database.BatchableContext BC) {
+  public void finish(Database.BatchableContext bc) {
     service.sendEmail();
   }
 }
