--- a/force-app/main/default/classes/src/BatchableStatefulClass.cls
+++ b/force-app/main/default/classes/src/BatchableStatefulClass.cls
@@ -1,7 +1,7 @@
 public class BatchableStatefulClass implements Database.Batchable<SObject>, Database.Stateful {
   public Integer recordsProcessed = 0;
 
-  public Database.QueryLocator start(Database.BatchableContext BC) {
+  public Database.QueryLocator start(Database.BatchableContext bc) {
     System.debug('start begin: ' + recordsProcessed);
     recordsProcessed = recordsProcessed + 1;
     System.debug('start end: ' + recordsProcessed);
@@ -10,17 +10,17 @@ public class BatchableStatefulClass implements Database.Batchable<SObject>, Data
     );
   }
 
-  public void execute(Database.BatchableContext BC, List<Account> scope) {
+  public void execute(Database.BatchableContext bc, List<Account> records) {
     System.debug('execute begin : ' + recordsProcessed);
-    for (Account acc : scope) {
+    for (Account acc : records) {
       acc.BillingCountry = 'USA';
       recordsProcessed = recordsProcessed + 1;
     }
-    update scope;
+    update records;
     System.debug('execute end : ' + recordsProcessed);
   }
 
-  public void finish(Database.BatchableContext BC) {
+  public void finish(Database.BatchableContext bc) {
     System.debug('finish : ' + recordsProcessed + ' records processed.');
     System.debug('Batch finished');
   }
